--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
 		"@lifeomic/react-vis-network": "1.1.0",
 		"@material-ui/core": "4.9.5",
 		"@material-ui/icons": "4.9.1",
-		"react": "16.13.0",
-		"react-dom": "16.13.0",
-		"react-scripts": "2.0.3",
-		"react-scripts-ts": "3.1.0",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-scripts": "3.4.1",
 		"styled-components": "5.1.0",
-		"typescript": "3.8.3",
-		"underscore": "1.10.1"
+		"typescript": "^3.8.3",
+		"underscore": "1.10.2"
 	},
 	"devDependencies": {
 		"@types/react": "16.7.18",
-		"@types/react-dom": "16.0.11"
+		"@types/react-dom": "16.0.11",
+		"source-map-loader": "^0.2.4",
+		"ts-loader": "^7.0.1",
+		"webpack": "^4.42.0",
+		"webpack-cli": "^3.3.11"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -26,5 +29,10 @@
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject"
 	},
-	"browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
