--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"keywords": [],
+	"license": "MIT",
 	"main": "src/index.tsx",
 	"dependencies": {
 		"@lifeomic/react-vis-network": "1.1.0",
@@ -16,11 +17,10 @@
 		"underscore": "1.10.2"
 	},
 	"devDependencies": {
-		"@types/react": "16.7.18",
-		"@types/react-dom": "16.0.11",
+		"@types/react": "16.9.34",
+		"@types/react-dom": "16.9.7",
 		"source-map-loader": "^0.2.4",
 		"ts-loader": "^7.0.1",
-		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.11"
 	},
 	"scripts": {
