--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@lifeomic/react-vis-network": "1.1.0",
 		"@material-ui/core": "4.9.5",
 		"@material-ui/icons": "4.9.1",
+		"@material-ui/lab": "^4.0.0-alpha.51",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"react-scripts": "3.4.1",
