adding docs folder and initializing readme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "build/dist",
+    "outDir": "/docs",
     "module": "esnext",
     "target": "es6",
     "lib": [
