--- a/package.json
+++ b/package.json
@@ -1,39 +1,51 @@
 {
-	"name": "cryptokitty-tree",
-	"version": "1.0.0",
-	"description": "",
-	"keywords": [],
-	"license": "MIT",
-	"main": "src/index.tsx",
-	"dependencies": {
-		"@lifeomic/react-vis-network": "1.1.0",
-		"@material-ui/core": "4.9.5",
-		"@material-ui/icons": "4.9.1",
-		"@material-ui/lab": "^4.0.0-alpha.51",
-		"react": "16.13.1",
-		"react-dom": "16.13.1",
-		"react-scripts": "3.4.1",
-		"styled-components": "5.1.0",
-		"typescript": "^3.8.3",
-		"underscore": "1.10.2"
-	},
-	"devDependencies": {
-		"@types/react": "16.9.34",
-		"@types/react-dom": "16.9.7",
-		"source-map-loader": "^0.2.4",
-		"ts-loader": "^7.0.1",
-		"webpack-cli": "^3.3.11"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject"
-	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	]
+  "name": "cryptokitty-tree",
+  "version": "1.0.0",
+  "description": "> #### The [Cryptokitties](https://www.cryptokitties.co/) Family Tree Visualizer",
+  "keywords": [],
+  "license": "MIT",
+  "main": "src/index.tsx",
+  "dependencies": {
+    "@lifeomic/react-vis-network": "1.1.0",
+    "@material-ui/core": "4.9.5",
+    "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.51",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-scripts": "3.4.1",
+    "styled-components": "5.1.0",
+    "typescript": "^3.8.3",
+    "underscore": "1.10.2"
+  },
+  "devDependencies": {
+    "@types/react": "16.9.34",
+    "@types/react-dom": "16.9.7",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^7.0.1",
+    "webpack-cli": "^3.3.11"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/daylennguyen/CryptokittiesFamilyTree.git"
+  },
+  "author": "flannyan",
+  "bugs": {
+    "url": "https://github.com/daylennguyen/CryptokittiesFamilyTree/issues"
+  },
+  "homepage": "https://github.com/daylennguyen/CryptokittiesFamilyTree#readme"
 }
