--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@lifeomic/react-vis-network": "1.1.0",
-    "@material-ui/core": "4.9.5",
-    "@material-ui/icons": "4.9.1",
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "latest",
     "@material-ui/lab": "^4.0.0-alpha.51",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -18,6 +18,7 @@
     "underscore": "1.10.2"
   },
   "devDependencies": {
+    "gh-pages": "latest",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.7",
     "source-map-loader": "^0.2.4",
@@ -28,6 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "browserslist": [
@@ -47,5 +50,5 @@
   "bugs": {
     "url": "https://github.com/daylennguyen/CryptokittiesFamilyTree/issues"
   },
-  "homepage": "https://github.com/daylennguyen/CryptokittiesFamilyTree#readme"
+  "homepage": "https://daylennguyen.github.io/CryptokittiesFamilyTree/"
 }
